--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -1707,6 +1707,8 @@ body.indigo-dark-theme {
     }
   }
 }
+
+@import '../../../extra/contact';
 @import '../../../extra/footer';
 @import '../../../extra/header';
 @import '../../../extra/help';
