--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -1712,6 +1712,7 @@ body.indigo-dark-theme {
 @import '../../../extra/footer';
 @import '../../../extra/header';
 @import '../../../extra/help';
+@import '../../../extra/about';
 @import '../../../extra/privacy';
 @import '../../../dashboard/dashboard';
 @import '../../../courseware/discover';
