--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -1709,6 +1709,7 @@ body.indigo-dark-theme {
 }
 
 @import '../../../extra/contact';
+@import '../../../extra/tos';
 @import '../../../extra/footer';
 @import '../../../extra/header';
 @import '../../../extra/help';
