--- a/lms/templates/header/navbar-authenticated.html
+++ b/lms/templates/header/navbar-authenticated.html
@@ -44,17 +44,21 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
         </div>
       % endif
     % endif
-    % if show_explore_courses:
-      <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
-          <a class="${'active ' if reverse('courses') == request.path else ''}tab-nav-link discover-new-link" href="${marketing_link('COURSES')}"
-             aria-current="${'page' if '/courses' in request.path else 'false'}">
-             ${_('Discover')}
-          </a>
-      </div>
-    % endif
+  % if show_explore_courses:
+  <div class="mobile-nav-item hidden-mobile nav-item nav-tab nav-tab--discover">
+    <a
+      class="nav-discover ${'active' if '/courses' in request.path else ''}"
+      href="${marketing_link('COURSES')}"
+      aria-current="${'page' if '/courses' in request.path else 'false'}"
+    >
+      ${_('Discover Courses')}
+    </a>
+  </div>
+% endif
+
   </div>
   <div class="secondary d-flex align-items-center">
-    <%include file="./theme-toggle-button.html" />
     <%include file="user_dropdown.html"/>
   </div>
+  
 </div>
