--- a/lms/templates/header/navbar-logo-header.html
+++ b/lms/templates/header/navbar-logo-header.html
@@ -1,6 +1,4 @@
-## mako
 <%page expression_filter="h" args="online_help_token"/>
-
 <%namespace name='static' file='../static_content.html'/>
 <%!
 from django.urls import reverse
@@ -8,7 +6,6 @@ from django.utils.translation import gettext as _
 from lms.djangoapps.ccx.overrides import get_current_ccx
 from openedx.core.djangoapps.site_configuration import helpers as configuration_helpers
 from openedx.features.enterprise_support.utils import get_enterprise_learner_portal
-# App that handles subdomain specific branding
 from lms.djangoapps.branding import api as branding_api
 %>
 
@@ -23,16 +20,10 @@ enterprise_customer_link = get_enterprise_learner_portal(request)
       title="${_('{name} Dashboard').format(name=enterprise_customer_link.get('name'))}"
       style="display:inline-flex;align-items:center;gap:.6rem;text-decoration:none;"
     >
-      <img
-        class="logo"
-        src="${enterprise_customer_link.get('logo')}"
-        alt="${_('{name} Learner Dashboard').format(name=enterprise_customer_link.get('name'))}"
-        style="height:32px;width:auto;"
-      />
-      <span
-        class="brand-text"
-        style="color:#0056A1;font-weight:800;font-size:1.15rem;letter-spacing:.2px;line-height:1;"
-      >CUSC Learning</span>
+      <img class="logo" src="${enterprise_customer_link.get('logo')}"
+           alt="${_('{name} Learner Dashboard').format(name=enterprise_customer_link.get('name'))}"
+           style="height:32px;width:auto;"/>
+      <span class="brand-text" style="color:#0056A1;font-weight:800;font-size:1.15rem;letter-spacing:.2px;line-height:1;">CUSC Learning</span>
       % if settings.LOGO_IMAGE_EXTRA_TEXT == 'edge':
         <span class="font-italic"> | EDGE</span>
       % endif
@@ -44,21 +35,24 @@ enterprise_customer_link = get_enterprise_learner_portal(request)
       style="display:inline-flex;align-items:center;gap:.6rem;text-decoration:none;"
     >
       <%block name="navigation_logo">
-        <img
-          class="logo"
-          src="${branding_api.get_logo_url(is_secure)}"
-          alt="${_("{platform_name} Home Page").format(platform_name=static.get_platform_name())}"
-          style="height:32px;width:auto;"
-        />
+        <img class="logo" src="${branding_api.get_logo_url(is_secure)}"
+             alt="${_("{platform_name} Home Page").format(platform_name=static.get_platform_name())}"
+             style="height:32px;width:auto;"/>
       </%block>
-      <span
-        class="brand-text"
-        style="color:#0056A1;font-weight:800;font-size:1.15rem;letter-spacing:.2px;line-height:1;"
-      >CUSC Learning</span>
+      <span class="brand-text" style="color:#0056A1;font-weight:800;font-size:1.15rem;letter-spacing:.2px;line-height:1;">CUSC Learning</span>
       % if settings.LOGO_IMAGE_EXTRA_TEXT == 'edge':
         <span class="font-italic"> | EDGE</span>
       % endif
     </a>
+
+    % if not user.is_authenticated:
+  <!-- Chỉ khách mới thấy tab này cạnh logo -->
+  <%
+    current_path = request.path if 'request' in locals() else ''
+    active_class = 'active' if current_path.startswith('/courses') else ''
+  %>
+  <a href="/courses" class="nav-discover ${active_class}">Discover Courses</a>
+% endif
   % endif
 
   % if course:
@@ -76,12 +70,3 @@ enterprise_customer_link = get_enterprise_learner_portal(request)
     </div>
   % endif
 </div>
-
-% if enable_enterprise_sidebar:
-  <div class="enterprise-tagline">
-    <% tagline = configuration_helpers.get_value('ENTERPRISE_TAGLINE', settings.ENTERPRISE_TAGLINE) %>
-    % if tagline:
-      ${tagline}
-    % endif
-  </div>
-% endif
