--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -1714,6 +1714,7 @@ body.indigo-dark-theme {
 @import '../../../extra/header';
 @import '../../../extra/help';
 @import '../../../extra/about';
+@import '../../../extra/blog';
 @import '../../../extra/privacy';
 @import '../../../dashboard/dashboard';
 @import '../../../courseware/discover';
