--- a/lms/templates/static_templates/blog.html
+++ b/lms/templates/static_templates/blog.html
@@ -13,7 +13,7 @@
       <p class="blog-subtitle">
         ${_("Discover the journey of CUSC Learning – where knowledge, technology, and passion converge to redefine online education in Vietnam.")} 
       </p>
-      <img src="${static.url('images/banner.jpg')}" alt="Students at CUSC Learning" class="blog-hero"/>
+      <img src="${static.url('images/blog-hero.jpg')}" alt="Students at CUSC Learning" class="blog-hero"/>
     </header>
 
     <article class="blog-body">
